--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vee-validate": "^3.4.12",
     "vue-backtotop": "^1.6.1",
     "vuex-persistedstate": "^4.0.0"
   },
